    - Update russian translation.
    - Update string "&Clipboard Mode" and translate in russian translation file.
    - Grammar fix in russian translation.
    - Add x2gohelper to start X2Go Client on Windows and clean child processes if
      X2Go Client crashes. (Fixes: #525).
    - On Windows rename x2goclient.exe to x2goclient-mainprocess.exe and
      x2gohelper.exe to x2goclient.exe.

  [ Mike DePaulo ]
  * New upstream release (4.0.3.0):
    - Windows: Install VcXsrv "misc" fonts by default, and make all 4 font
      groups optional: misc, 75dpi, 100dpi and others (Fixes: #108)
      Note: The fact that all the fonts are included makes the installer about
      30MB larger.
    - Windows: Make the desktop shortcut optional during install,
      but still the default.

  [ Stefan Baur ]
  * New upstream version (4.0.2.1):
    - Update German translation files.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Apr 2014 18:30:25 +0200

x2goclient (4.0.2.1-0x2go1) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * New upstream release (4.0.2.1):
    - Fix FTBFS on arm64 (and others) architecture. (Fixes: #498).
    - Only show session name in notification bubbles with debugging
      enabled. (Fixes: #364).
    - New command line option (--keep-trayicon). With that options set,
      we force X2Go client to only use the default "accelerated X" as
      system tray icon (and prohibit usage of the session's icon as
      tray icon). (Fixes: #365).
    - Provide more meaningful messages on SSH errors (host pub key not
      found, export pub key not found, authorized_keys file not found).
      For SSHd startup failures provide different messages on Windows
      and non-Windows machines. (Fixes: #235).
      FIXME: add detection code to report SSH daemon startup failures.
    - Add new cmdline option --hide-foldersharing. If used, all GUI
      elements related to exporting client-side folders to X2Go sessions
      get hidden. (Fixes: #514).