@@ -1,14 +1,0 @@
-######################################################################
-# Automatically generated by qmake (2.01a) Di. Jul 8 10:58:26 2014
-######################################################################
-
-TEMPLATE = app
-TARGET = x2goclient
-DEPENDPATH += .
-INCLUDEPATH += .
-
-# Input
-SOURCES += x2gohelper.cpp
-QT -= gui
-CONFIG += static release
-#CONFIG += console
