@@ -25,6 +25,8 @@ x2goclient (4.0.3.0-0x2go1) UNRELEASED; urgency=low
       X2Go Client crashes. (Fixes: #525).
     - On Windows rename x2goclient.exe to x2goclient-mainprocess.exe and
       x2gohelper.exe to x2goclient.exe.
+    - Start x2gohelper from X2Go Client. Revert name changing of X2Go Client and
+      x2gohelper
 
   [ Mike DePaulo ]
   * New upstream release (4.0.3.0):
